<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiactivities.ScoreActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/yourscore"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="79dp">

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="164dp"
            android:layout_height="57dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="132dp"
            android:layout_marginTop="207dp"
            android:layout_marginEnd="114dp"
            android:layout_marginBottom="465dp"
            android:text="@string/your_score_0"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/restartButton"
            android:layout_width="171dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="131dp"
            android:layout_marginEnd="128dp"
            android:layout_marginBottom="384dp"
            android:text="@string/restart" />

        <Button
            android:id="@+id/menuButton"
            android:layout_width="154dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="131dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="291dp"
            android:text="@string/return_to_menu" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>