<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".authentication.RegistrationActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_UserName"
        android:layout_width="274dp"
        android:layout_height="63dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/insert_your_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edt_UserEmail"
        app:layout_constraintEnd_toEndOf="@+id/edt_UserEmail"
        app:layout_constraintStart_toStartOf="@+id/edt_UserEmail">

    </androidx.appcompat.widget.AppCompatEditText>


    <EditText
        android:id="@+id/edt_UserEmail"
        android:layout_width="274dp"
        android:layout_height="63dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="16dp"
        android:hint="Insert your email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306">

    </EditText>

    <EditText
        android:id="@+id/edt_UserGender"
        android:layout_width="274dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:hint="@string/insert_your_gender"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_UserEmail">

    </EditText>

    <EditText
        android:id="@+id/edt_UserPhone"
        android:layout_width="274dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:hint="@string/insert_your_phone"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_UserGender">

    </EditText>

    <EditText
        android:id="@+id/edt_UserPassword"
        android:layout_width="274dp"
        android:layout_height="63dp"
        android:layout_marginTop="72dp"
        android:hint="Insert your password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_UserPhone">

    </EditText>

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="156dp"
        android:layout_height="65dp"
        android:layout_margin="5dp"
        android:layout_marginTop="56dp"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_UserPassword"
        app:layout_constraintStart_toStartOf="@+id/edt_UserPassword"
        app:layout_constraintTop_toBottomOf="@+id/edt_UserPassword"
        app:layout_constraintVertical_bias="0.337" />

    <TextView
        android:id="@+id/tv_AlreadyRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/tv_alreadyLogin"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Register"
        app:layout_constraintVertical_bias="0.767">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>


