<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quizapp_options"
    tools:context=".uiactivities.ProfileActivity">

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="169dp"
        android:layout_height="45dp"
        android:padding="8dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings"
        app:layout_constraintVertical_bias="0.897" />

    <Button
        android:id="@+id/btn_Start_Quiz"
        android:layout_width="204dp"
        android:layout_height="68dp"
        android:layout_margin="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/play_quiz"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="204dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_Start_Quiz"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_Start_Quiz"
        app:layout_constraintTop_toBottomOf="@+id/btn_Start_Quiz" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="98dp"
        android:layout_height="52dp"
        android:layout_marginTop="26dp"
        android:background="?android:attr/selectableItemBackground"
        android:padding="1dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>